--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,44 @@
 * {
-    background: slateblue;
+    padding: 0;
+    margin: 0;
 }
+
+body {
+    background: #A9A6A2;
+}
+
+a {
+    text-decoration: none;
+}
+ header {
+     background: #7F6689;
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     padding: 10px;
+     margin-bottom: 10px;
+ }
+
+ header a {
+     align-self: center;
+ }
+
+ main {
+     display: flex;
+     flex-direction: column;
+ }
+
+ ul {
+     background: #C2B664;
+     display: flex;
+     margin-left: 100px;
+     flex-direction: column;
+     border: 1px solid black;
+     flex-grow: 1;
+     margin-right: 100px;
+ }
+
+ li {
+     list-style: none;
+     margin: 10px;
+ }
